@@ -13,12 +13,15 @@ lib/Acme/MetaSyntactic/kodokan.pm
 lib/Acme/MetaSyntactic/michelin.pm
 lib/Acme/MetaSyntactic/nehi.pm
 lib/Acme/MetaSyntactic/noughts_and_crosses.pm
+lib/Acme/MetaSyntactic/playing_cards.pm
 lib/Acme/MetaSyntactic/shou_dou_qi.pm
 lib/Acme/MetaSyntactic/sodor.pm
 lib/Acme/MetaSyntactic/southpark.pm
+lib/Acme/MetaSyntactic/stratego.pm
 lib/Acme/MetaSyntactic/willy_wonka.pm
 Makefile.PL
 MANIFEST
+MANIFEST.SKIP
 t/000_basic.t
 t/100_metasyntactic.t
 t/950_pod.t
