@@ -1,0 +1,5 @@
+.git
+.gitignore
+TODO
+Releases
+Acme-MetaSyntactic-Themes-Abigail-[0-9]*\.tar\.gz
